--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+data/README_2019.txt
+data/so_survey_2019.pdf
+data/survey_results_public.csv
+data/survey_results_schema.csv
